# perDiem

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/: codegov.yml
.github/workflows/: codegov.yml  rust.yml
src/: evals.rs  lib.rs  operators.rs  types.rs  utils.rs
src/textmanagement/: formatting.rs  parsing.rs
tests/: tests.rs
