[package]
name = "perDiem"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A collection of Date and DateTime utilities"
repository = "https://github.com/Dtimer0/perDiem"
keywords = ["date-utilities", "Date", "date-utils", "DateTime", "chrono"]
categories = ["date-and-time", "mathematics", "parsing"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
either = "1.9.0"
cond_utils = "0.1.0"
regex = "1.10.2"
undup = "0.0.1"
tap = "1.0.1"
struct_iterable = "0.1.1"
[profile.dev]
opt-level = 3  